--- a/3. Styling with CSS/styles.css
+++ b/3. Styling with CSS/styles.css
@@ -2,7 +2,7 @@
     /* TODO 3.1: Align the text center or right */
     text-align: center;
     /* TODO 3.2: Change the color of the font to your favorite color */
-    color: red;
+    color: rgb(160, 65, 65);
     /* TODO 3.3: Make the font thicker */
     font-weight: 900;
     /* TODO 3.4: Increase the font size*/
